minor update handShift.js: stop loop if nextSibling has class handShift

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -28,7 +28,9 @@ body {
     margin-left: 4.5em;
 }
 
-
+.slider {
+    z-index: 999;
+}
 
 .intro_column {
     display: flex;
